tests/fail/alias_mutually_recursive.tig
let
    type a = b
    type b = c
    type c = d
    type d = b
in 
end
